# ARIES_AgenticAI_multiformat_gen

./: .env  AgentCard.json  Dockerfile  README.md  docker-compose.yml  followup_curl.cmd  index.html  nasiko_test.cmd  prepare_submission.py  pyproject.toml  run_docker.cmd  start_agent.cmd  test_curl.cmd  test_exact.cmd  time_test.cmd
cli/nasiko_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
output/: Fintech_Seed_Pitch_Deck.pptx  FitBot_Pitch_Deck.pptx  Q1_Sales_Performance_Tracker.docx  Q1_Sales_Performance_Tracker.docx.docx  Q1_Sales_Performance_Tracker.xlsx
src/: __init__.py  __main__.py  document_toolset.py  main__.py  openai_agent.py  openai_agent_executor.py
